--- a/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.css
+++ b/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.css
@@ -12,12 +12,116 @@
   padding: 30px;
   -webkit-transition: 1s;
   transition: 1s;
-  background-color: rgba(35, 36, 37, 0.6);
+  background: rgba(35, 36, 37, 0.6);
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+#section-professional-skills .professional-skills-container .professional-skill {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 2px 0;
+  padding: 2px 10px 2px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(10, 10, 10, 0.5)), color-stop(10%, rgba(15, 15, 15, 0.5)), to(rgba(0, 0, 0, 0.5)));
+  background: linear-gradient(rgba(10, 10, 10, 0.5) 0%, rgba(15, 15, 15, 0.5) 10%, rgba(0, 0, 0, 0.5));
+  border-radius: 8px;
+  overflow: hidden;
+  border: 1px solid #000;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-size: 0.8rem;
+  color: #fff;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  z-index: 10;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .name {
+  position: relative;
+  width: 120px;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .percent {
+  position: relative;
+  width: calc(100% - 150px);
+  height: 15px;
+  margin: 2px 10px 0;
+  background: rgba(10, 10, 10, 0.5);
+  -webkit-box-shadow: inset 0 0 10px #000;
+          box-shadow: inset 0 0 10px #000;
+  border-radius: 100px;
+  overflow: hidden;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .percent .outer-progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border-radius: 100px;
+  background: #fff;
+  -webkit-box-shadow: inset 0 0 2px #000;
+          box-shadow: inset 0 0 2px #000;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .percent .outer-progress .inner-progress {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 100px;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .percent .outer-progress .active-inner-progress {
+  -webkit-animation: progress-animate 2s ease-in-out forwards;
+          animation: progress-animate 2s ease-in-out forwards;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  width: 100%;
+}
+
+#section-professional-skills .professional-skills-container .professional-skill .value {
+  position: relative;
+  width: 30px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+@-webkit-keyframes progress-animate {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes progress-animate {
+  from {
+    width: 0;
+  }
+}
+
+@media screen and (max-width: 1280px) {
   #section-professional-skills {
     padding: 4em 0;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .name {
+    width: 90px;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .percent .outer-progress .inner-progress {
+    width: 100%;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .percent .outer-progress .active-inner-progress {
+    -webkit-animation: none;
+            animation: none;
   }
 }
 
@@ -27,12 +131,24 @@
   }
 }
 
-@media screen and (max-width: 414px) {
-  #section-professional-skills {
-    padding: 3.5em 0;
-  }
+@media screen and (max-width: 539px) {
   #section-professional-skills .professional-skills-container {
     padding: 20px;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill {
+    padding: 2px 10px 2px;
+    font-size: 0.6rem;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .name {
+    width: 70px;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .percent {
+    width: calc(100% - 100px);
+    margin: 2px 5px 0;
+  }
+  #section-professional-skills .professional-skills-container .professional-skill .value {
+    width: 20px;
+    text-align: right;
   }
 }
 /*# sourceMappingURL=SectionProfessionalSkills.css.map */
