--- a/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.scss
@@ -1,12 +1,16 @@
 //Colors
-
 $bg-skills-container: rgba(35, 36, 37, 0.6);
+$bg-professional-skill: linear-gradient(rgba(10, 10, 10, 0.5) 0%, rgba(15, 15, 15, 0.5) 10%, rgba(0, 0, 0, 0.5));
+$text-color: #fff;
+$percent-bg: rgba(10, 10, 10, 0.5);
+$border-color: #000;
+$box-shadow-color: $border-color;
+$outer-bg: $text-color;
 
 //Breakpoints
 $breakpoint-browser: 1280px;
-$breakpoint-iPad-Pro: 1024px;
 $breakpoint-iPad: 768px;
-$breakpoint-phone: 414px;
+$breakpoint-middle-small-less: 539px;
 
 #section-professional-skills {
     padding: 5em 0;
@@ -19,23 +23,125 @@ $breakpoint-phone: 414px;
         margin: 0 auto;
         padding: 30px;
         transition: 1s;
-        background-color: $bg-skills-container;
+        background: $bg-skills-container;
+
+        .professional-skill {
+            position: relative;
+            display: flex;
+            margin: 2px 0;
+            padding: 2px 10px 2px;
+            background: $bg-professional-skill;
+            border-radius: 8px;
+            overflow: hidden;
+            border: 1px solid $border-color;
+            transition: 0.5s;
+            font-size: 0.8rem;
+            color: $text-color;
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 50%;
+                background: rgba(255, 255, 255, 0.1);
+                z-index: 10;
+            }
+
+            .name {
+                position: relative;
+                width: 120px;
+            }
+
+            .percent {
+                position: relative;
+                width: calc(100% - 150px);
+                height: 15px;
+                margin: 2px 10px 0;
+                background: $percent-bg;
+                box-shadow: inset 0 0 10px $box-shadow-color;
+                border-radius: 100px;
+                overflow: hidden;
+
+                .outer-progress {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    border-radius: 100px;
+                    background: $outer-bg;
+                    box-shadow: inset 0 0 2px $box-shadow-color;
+
+                    .inner-progress {
+                        height: 100%;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        border-radius: 100px;
+                        transition: 2s;
+
+                    }
+
+                    .active-inner-progress {
+                        animation: progress-animate 2s ease-in-out forwards;
+                        transition: 0.5s ease;
+                        width: 100%;
+                    }
+                }
+            }
+
+            .value {
+                position: relative;
+                width: 30px;
+                text-align: left;
+                text-transform: uppercase;
+
+            }
+        }
     }
 }
 
-//Breakpoint Browser to  iPad-Pro 
+//ANIMATION
 
-@media screen and (min-width: $breakpoint-iPad-Pro) and (max-width: $breakpoint-browser) {
+@keyframes progress-animate {
+    from {
+        width: 0;
+    }
+}
 
+
+//Breakpoint Browser
+
+@media screen and (max-width: $breakpoint-browser) {
     #section-professional-skills {
         padding: 4em 0;
+
+        .professional-skills-container {
+            .professional-skill {
+                .name {
+                    width: 90px;
+                }
+
+                .percent {
+                    .outer-progress {
+                        .inner-progress {
+                            width: 100%;
+                        }
+
+                        .active-inner-progress {
+                            animation: none;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 //Breakpoint-iPad
 
 @media screen and (max-width: $breakpoint-iPad) {
-
     #section-professional-skills {
         padding: 3em 0;
     }
@@ -43,14 +149,29 @@ $breakpoint-phone: 414px;
 
 //Breakpoint-phone
 
-@media screen and (max-width: $breakpoint-phone) {
-
+@media screen and (max-width: $breakpoint-middle-small-less) {
     #section-professional-skills {
-        padding: 3.5em 0;
-
         .professional-skills-container {
             padding: 20px;
 
+            .professional-skill {
+                padding: 2px 10px 2px;
+                font-size: 0.6rem;
+
+                .name {
+                    width: 70px;
+                }
+
+                .percent {
+                    width: calc(100% - 100px);
+                    margin: 2px 5px 0;
+                }
+
+                .value {
+                    width: 20px;
+                    text-align: right;
+                }
+            }
         }
     }
 }
