--- a/portfolio/src/components/pages/about/aboutMain/sectionPersonalSkills/SectionPersonalSkills.css
+++ b/portfolio/src/components/pages/about/aboutMain/sectionPersonalSkills/SectionPersonalSkills.css
@@ -12,43 +12,204 @@
   grid-gap: 20px;
 }
 
-@media screen and (max-width: 1280px) {
-  #persnal-skills {
-    padding: 4em 0;
-  }
-  #persnal-skills .personal-skills-container {
-    grid-gap: 10px;
+#personal-skills .personal-skills-container .personal-skill-card {
+  position: relative;
+  max-width: 240px;
+  height: 300px;
+  margin: 0 auto;
+  overflow: hidden;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background: -webkit-gradient(linear, left bottom, left top, from(#111111), color-stop(#8b8b91), to(#000103));
+  background: linear-gradient(0deg, #111111, #8b8b91, #000103);
+  color: #a5a5a5;
+  border-radius: 6px;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent {
+  position: relative;
+  max-width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  -webkit-box-shadow: inset 0 0 50px #252525;
+          box-shadow: inset 0 0 50px #252525;
+  background: #272727;
+  z-index: 2;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg {
+  position: relative;
+  max-width: 150px;
+  height: 150px;
+  z-index: 100;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke-width: 10;
+  stroke-linecap: round;
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-outer {
+  stroke: #a5a5a5;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-progress {
+  stroke-dashoffset: 440;
+  stroke-dasharray: 440;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent .personal-skill-value {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent .personal-skill-value h2 {
+  font-size: 1.5rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: 500;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent .personal-skill-value h2 span {
+  font-size: 1.2rem;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-name {
+  position: relative;
+  margin-top: 1.5em;
+  font-size: 1.4rem;
+  letter-spacing: 0.05rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: 700;
+  text-align: center;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  -webkit-box-shadow: 0 15px 35px rgba(43, 43, 43, 0.8);
+          box-shadow: 0 15px 35px rgba(43, 43, 43, 0.8);
+}
+
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .svg .circle-outer {
+  stroke: #fff;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .circle-progress-responsible,
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .circle-progress-team-player,
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .circle-progress-organized,
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .circle-progress-fast-learner {
+  -webkit-animation: progress-personal-skill 1s ease-in-out forwards;
+          animation: progress-personal-skill 1s ease-in-out forwards;
+  stroke: #fff;
+  stroke-dashoffset: 0;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .personal-skill-value h2 {
+  color: #fff;
+  font-size: 2.1rem;
+}
+
+#personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-name {
+  color: #fff;
+}
+
+@-webkit-keyframes progress-personal-skill {
+  from {
+    stroke-dashoffset: 440;
   }
 }
 
-@media screen and (min-width: 540px) and (max-width: 960px) {
+@keyframes progress-personal-skill {
+  from {
+    stroke-dashoffset: 440;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #personal-skills {
+    padding: 4em 0;
+  }
+  #personal-skills .personal-skills-container .personal-skill-card {
+    max-width: 200px;
+    height: 260px;
+    color: #fff;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-outer {
+    stroke: #fff;
+  }
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-progress-responsible,
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-progress-team-player,
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-progress-reliable,
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent svg .circle-progress-fast-learner {
+    stroke: #fff;
+    stroke-dashoffset: calc(440 - (440 * 100) / 100);
+  }
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-percent .personal-skill-value h2 {
+    font-size: 1.8rem;
+  }
+  #personal-skills .personal-skills-container .personal-skill-card .personal-skill-box .personal-skill-name {
+    margin-top: 1.1em;
+    font-size: 1.3rem;
+  }
+  #personal-skills .personal-skills-container .personal-skill-card:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  #personal-skills .personal-skills-container .personal-skill-card:hover .personal-skill-box .personal-skill-percent .personal-skill-value h2 {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (max-width: 960px) {
   #personal-skills {
     padding: 3em 0;
   }
   #personal-skills .personal-skills-container {
-    grid-gap: 10px;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (min-width: 415px) and (max-width: 539px) {
+@media screen and (max-width: 539px) {
   #personal-skills {
-    padding: 3em 0;
+    padding: 2em 0;
   }
   #personal-skills .personal-skills-container {
-    grid-gap: 10px;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@media screen and (max-width: 414px) {
-  #personal-skills {
-    padding: 3em 0;
-  }
-  #personal-skills .personal-skills-container {
-    grid-gap: 10px;
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
