update-contact-page

--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
@@ -57,6 +57,16 @@
 
 #section-about .about-section-container .about-image-container {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: -moz-box;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #section-about .about-section-container .about-image-container .about-image {
